# bot-licitacao

./: .gitignore  Dockerfile  README.md  hello.py  pyproject.toml  requirements.txt  streamlit_app.py
db/: pncp.db
sql/: create.sql  update_control.sql
src/: __init__.py  chat_pdf.py  main.py
src/banco_de_dados/: carga.py  db.py  loading_data.py  setup_db.py
src/coleta/: coletor.py
src/tratamento/: trata_publicacoes.py
src/uploader/: driver_api.py
tests/: test_coletor.py
