[project]
name = "bot-licitacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "embedchain>=0.1.125",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=6.0.0",
]
